WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159031
REGRESSION (
r201629
): Weird button glitching on github.com
https://bugs.webkit.org/show_bug.cgi?id=159031
Summary
REGRESSION (r201629): Weird button glitching on github.com
Simon Fraser (smfr)
Reported
2016-06-22 12:10:03 PDT
REGRESSION (
r201629
): Weird button glitching on github.com
Attachments
Patch
(6.79 KB, patch)
2016-06-22 12:11 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-06-22 12:11:38 PDT
Created
attachment 281855
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-06-22 12:11:56 PDT
rdar://problem/26880332
Said Abou-Hallawa
Comment 3
2016-06-22 12:20:33 PDT
Comment on
attachment 281855
[details]
Patch Looks good to me. Unofficial r=me.
Simon Fraser (smfr)
Comment 4
2016-06-22 13:45:39 PDT
https://trac.webkit.org/r202348
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug