Source/WebCore/platform/graphics/IntSize.h
@@ -125,9 +125,9 @@ public:
 
     IntSize constrainedBetween(const IntSize& min, const IntSize& max) const;
 
-    int area() const
+    unsigned area() const
     {
-        return m_width * m_height;
+        return abs(m_width) * abs(m_height);
     }
 
     int diagonalLengthSquared() const
